Update and rename pgm8.html to imagemap.html

--- a/imagemap.html
+++ b/imagemap.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Activity 8</title>
+		<title>Imagemap</title>
 	</head>
 	<body>
 		<img src="/home/6CSE2/20171cse0107/html/workplace.jpg" alt="Workplace" usemap="#workplace">
