--- a/pgm4-itresume.html
+++ b/pgm4-itresume.html
@@ -33,7 +33,7 @@
 		<li>Presidency University 2017-2021</li>
 	</ul>
 	
-	<a href="">TIME TABLE ></a>
+	<a href="timetable.html">TIME TABLE ></a>
 	
 	</body>
 </html>
