--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
 
 	<p>
 	<h4>Educational Qualification</h4>
-	<table border="1">
+	<table border="1" width="100%" height="25%">
 		<tr style="text-align:center;cell-padding:5px;cell-spacing:5px">
 			<th>Qualification</th>
 			<th>University</th>
@@ -82,7 +82,7 @@
 			<li><dt>JAVA</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>PYTHON</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>SQL</dt><dd>Intermediate knowledge</dd></li>
-			<li><dt>Assembly-leve language</dt><dd>Intermediate knowledge</dd></li>
+			<li><dt>Assembly-leve </dt><dd>Intermediate knowledge</dd></li>
 		</dl>	
 	</ul>
 	<hr>
