--- a/resume.html
+++ b/resume.html
@@ -77,13 +77,18 @@
 	<p>
 	<h4>Technical skills</h4>
 	<ul type="circle">
-		<dl>
+		<!--<dl>
 			<li><dt>C/C++</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>JAVA</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>PYTHON</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>SQL</dt><dd>Intermediate knowledge</dd></li>
 			<li><dt>Assembly-leve </dt><dd>Intermediate knowledge</dd></li>
-		</dl>	
+		</dl>	-->
+		<li><span style="color:red">C/C++:</span>Intermediate knowledge</li>
+		<li><span style="color:red">JAVA:</span>Intermediate knowledge</li>
+		<li><span style="color:red">PYTHON:</span>Intermediate knowledge</li>
+		<li><span style="color:red">SQL:</span>Intermediate knowledge</li>
+		<li><span style="color:red">Assembly-level:</span>Intermediate knowledge</li>
 	</ul>
 	<hr>
 	</p>
