12 march 20 -links whith pseudo classes

--- a/links.html
+++ b/links.html
@@ -8,7 +8,6 @@
 			a.a2{
 				text-decoration:none;
 				margin:20px;
-				color:green;
 				
 			}
 			a.a3{
@@ -21,11 +20,25 @@
 				border:5px solid red;
 				padding:5px;
 				margin:20px;
-				background-color:red;
-				color:white;				
+				background-color:red;			
 				text-decoration:none;
 			}
-						
+			a:link{
+				color:black;		
+			}
+			a:hover{
+				color:green;
+				text-decoration:underline;
+				background-color:yellow;
+			}
+			a:visited{
+				color:blue;
+			}
+			a:active{
+				color:red;
+			}	
+
+
 		</style>
 	</head>
 	<body>
@@ -33,6 +46,7 @@
 		<a class="a2" href="/home/6CSE2/20171cse0107/css/idselector.html">Link2</a>
 		<a class="a3" href="/home/6CSE2/20171cse0107/css/3mar-activity1.html">Link3</a>
 		<a class="a4"  href="/home/6CSE2/20171cse0107/css/3mar-activity.html">Link4</a>
+		
 
 	</body>
 </html>
